added endpoints for searching
